# auto-healer

./: Dockerfile.agent  Dockerfile.mcp  README.md  deploy.sh  env.example  inject_bad_metrics.py  mcp_server.py  mcp_tools.py  pyproject.toml  root_agent.py  setup_bigquery.py
docs/: HLD_SUBMISSION.md  high_level_design_diagram.mmd  idea_overview.md  sample_metrics.md
mock_service/: Dockerfile  README.md  pom.xml
mock_service/src/main/java/com/google/bnb/mock/: MockMicroserviceApplication.java
mock_service/src/main/java/com/google/bnb/mock/controller/: HealthController.java
mock_service/src/main/java/com/google/bnb/mock/model/: HealthResponse.java
mock_service/src/main/java/com/google/bnb/mock/service/: BigQueryWriter.java  MetricsSimulator.java
mock_service/src/main/resources/: application.properties
